
*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Bug #775985: Only set stdout.encoding if a codec is available.

Extension modules
-----------------

- Bug #770485: cStringIO did not support the f.closed attribute.

- Patch #781722: Gracefully reject AF_INET6 in socket.inet_pton
  if IPv6 is disabled.

- Bug #783312: Release host name memory in socket calls.

Library
-------

- sets.py can now run under Py2.2

- Bug #778964:  random.seed() now uses fractional seconds so that
  rapid successive, seeding calls will produce different sequences.

- Bug #777664: Add Tkconstants.HIDDEN.

- Bug #781065: test_normalization is updated to the current
  URL of the Unicode 3.2 normalization file.

- Bug #782369:  fix memory leak in array module.

- Caching in _strptime.py has been re-introduced.  This leads to a large
  performance boost at the cost of not being thread-safe from locale
  changes while executing time.strptime() .

- Bug #783952: time.strptime() now properly handles issue of
  time.tzname[0] == time.tzname[1] while time.daylight is set to be
  true.

IDLE
----

- Bug #774680: IDLE now does not fail to save the file anymore
  if the Tk buffer is not a Unicode string, yet eol_convention is.

- Bug #782510: The idna codec would fail to support names with a
  trailing full-stop.

Build
-----

C API
-----

Windows
-------

Mac
---


What's New in Python 2.3 final?
===============================

*Release date: 29-Jul-2003*

IDLE
----

- Bug 778400:  IDLE hangs when selecting "Edit with IDLE" from explorer.
  This was unique to Windows, and was fixed by adding an -n switch to
  the command the Windows installer creates to execute "Edit with IDLE"
  context-menu actions.

- IDLE displays a new message upon startup:  some "personal firewall"
  kinds of programs (for example, ZoneAlarm) open a dialog of their
  own when any program opens a socket.  IDLE does use sockets, talking
  on the computer's internal loopback interface.  This connection is not