@@ -27,7 +27,10 @@ Extension modules
 Library
 -------
 
-- sets.py can now run under Py2.2
+- sets.py now runs under Py2.2.  In addition, the argument restrictions
+  for most set methods (but not the operators) have been relaxed to
+  allow any iterable.  Also the Set.update() has been deprecated because
+  it duplicates Set.union_update().
 
 - Bug #778964:  random.seed() now uses fractional seconds so that
   rapid successive, seeding calls will produce different sequences.
